--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "nodemon --watch main.js --exec npm run build",
+    "build": "electron ."
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/Caiyuzhen/Electron_Base#readme",
   "devDependencies": {
     "electron": "^25.0.1"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.22"
   }
 }
